--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,13 +11,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link rel="icon" href="images/chabo.png" type="image/x-icon">
+  <link rel="icon" href="images/chatbot.png" type="image/x-icon">
 
   <title>Chat</title>
 </head>
 
 <body>
-
 
   {% include 'navbar.html' %}
 
