Demonstration of the main concept of the project

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -11,11 +11,18 @@
             </h4>
 
             <section class="card-body chat-messages">
+                <div class="card mb-3 col-10">
+                    <div class="card-body p-2">
+                        <h6 class="card-title mb-1">Pampushka Understander</h6>
+                        <p class="card-text mb-1">{{ quest }}</p>
+                        <p class="card-text fst-italic"><small class="text-muted">just now</small></p>
+                    </div>
+                </div>
 
                 <div class="card mb-3 col-10 float-end">
                     <div class="card-body p-2">
                         <h6 class="card-title mb-1">User</h6>
-                        <p class="card-text mb-1"> {{ text }} </p>
+                        <p class="card-text mb-1">{{ text }} </p>
                         <p class="card-text fst-italic"><small class="text-muted">just now</small></p>
                     </div>
                 </div>
